--- a/SAM/Tasks/templates/tasks.html
+++ b/SAM/Tasks/templates/tasks.html
@@ -13,8 +13,8 @@
 
 
 
+{% endfor %}
 
-
-<a href="{% url 'add' %}">Add New Task</a>
+<a href="{% url 'tasks:add' %}">Add New Task</a>
 
 {% endblock %}
