added an app called CRUD

--- a/SAM/staticapp/templates/static.html
+++ b/SAM/staticapp/templates/static.html
@@ -5,11 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="{%static 'static.css'%}">
 </head>
 <h1>WELCOME</h1>
-<body>
-
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam corporis dolor ea eius exercitationem facere fugit hic id, ipsam nemo odio perferendis quas quisquam recusandae similique totam vitae voluptate.</p>
-
+<img src="{% static 'Basketball%201.jpg'%}" alt="">
 </body>
 </html>
