--- a/SAM/crud/templates/crud.html
+++ b/SAM/crud/templates/crud.html
@@ -94,18 +94,18 @@
     </tr>
   </thead>
   <tbody>
-
+  {% for d in data %}
     <tr>
-      <th scope="row">10</th>
-      <td>Somebody</td>
-      <td>male@gmail.com</td>
-      <td>60</td>
-      <td>male</td>
-      <td><a type="button" href="" class="btn btn-outline-primary">Edit</a></td>
-      <td><a type="button" href="" class="btn btn-outline-danger">Delete</a></td>
+      <th scope="row">{{d.id}}</th>
+      <td>{{d.name}}</td>
+      <td>{{d.email}}</td>
+      <td>{{d.age}}</td>
+      <td>{{d.gender}}</td>
+      <td><a type="button" href="/update/{{d.id}}" class="btn btn-outline-primary">Edit</a></td>
+      <td><a type="button" href="/delete/{{d.id}}" class="btn btn-outline-danger">Delete</a></td>
 
     </tr>
-
+  {% endfor %}
   </tbody>
 </table>
 
